parser/TidyParser/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from TidyParser/Par.y
-----------------------------------------------------------------------------

state 27 contains 2 shift/reduce conflicts.
state 46 contains 2 shift/reduce conflicts.
state 79 contains 1 shift/reduce conflicts.
state 82 contains 8 shift/reduce conflicts.
state 83 contains 3 shift/reduce conflicts.
state 84 contains 2 shift/reduce conflicts.
state 171 contains 1 shift/reduce conflicts.
state 180 contains 3 shift/reduce conflicts.
state 181 contains 2 shift/reduce conflicts.
state 182 contains 2 shift/reduce conflicts.
state 183 contains 2 shift/reduce conflicts.
state 269 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Char -> L_charac                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	UpperCaseIdent -> L_UpperCaseIdent                 (4)
	LowerCaseIdent -> L_LowerCaseIdent                 (5)
	Program -> ListClassDecl                           (6)
	ListClassIdent ->                                  (7)
	ListClassIdent -> ClassIdent                       (8)
	ListClassIdent -> ClassIdent ',' ListClassIdent    (9)
	ClassIdent -> UpperCaseIdent                       (10)
	ListClassDecl -> ClassDecl                         (11)
	ListClassDecl -> ClassDecl ListClassDecl           (12)
	ClassDecl -> ClassType 'class' ClassIdent Inheritance ClassBody   (13)
	ClassDecl -> 'abstract' ClassType 'class' ClassIdent Inheritance ClassBody   (14)
	Inheritance ->                                     (15)
	Inheritance -> 'extends' ClassIdent                (16)
	ClassBody ->                                       (17)
	ClassBody -> '{' ValuesSection VariablesSection FunctionsSection ActionsSection '}'   (18)
	ClassType -> 'mutable'                             (19)
	ClassType -> 'immutable'                           (20)
	ClassType -> 'singleton'                           (21)
	ValuesSection ->                                   (22)
	ValuesSection -> 'values:' ValSBody                (23)
	VariablesSection ->                                (24)
	VariablesSection -> 'variables:' VarSBody          (25)
	FunctionsSection ->                                (26)
	FunctionsSection -> 'functions:' FSBody            (27)
	ActionsSection ->                                  (28)
	ActionsSection -> 'actions:' ASBody                (29)
	ValSBody -> ListValueDecl                          (30)
	ValSBody -> '{' ListValueDecl '}'                  (31)
	ValueIdent -> LowerCaseIdent                       (32)
	ValueType -> ClassIdent                            (33)
	ValueType -> ClassIdent '[' ListClassIdent ']'     (34)
	ValueType -> 'get' MethodType                      (35)
	ValueType -> 'do' MethodType                       (36)
	ListValueDecl ->                                   (37)
	ListValueDecl -> ValueDecl                         (38)
	ListValueDecl -> ValueDecl ',' ListValueDecl       (39)
	ValueDecl -> ValueDeclProper                       (40)
	ValueDecl -> 'private' ValueDeclProper             (41)
	ValueDeclProper -> ValueIdent ':' ValueType        (42)
	ValueDeclProper -> ValueIdent ':' ValueType '=' Expr   (43)
	VarSBody -> ListValueDecl                          (44)
	VarSBody -> '{' ListValueDecl '}'                  (45)
	FSBody ->                                          (46)
	FSBody -> '{' ListFunctionDecl '}'                 (47)
	FunctionIdent -> LowerCaseIdent                    (48)
	MethodType -> '(' ListValueDecl ')' '->' ValueType   (49)
	ListFunctionDecl ->                                (50)
	ListFunctionDecl -> FunctionDecl ListFunctionDecl   (51)
	FunctionDecl -> 'override' FunctionIdent ':' MethodType '=' FunctionBody   (52)
	FunctionDecl -> FunctionIdent ':' MethodType '=' FunctionBody   (53)
	FunctionDecl -> 'private' FunctionIdent ':' MethodType '=' FunctionBody   (54)
	FunctionBody -> Expr                               (55)
	FunctionBody -> '{' Expr '}' WithValues            (56)
	WithValues ->                                      (57)
	WithValues -> 'with' ValuesSection                 (58)
	ASBody ->                                          (59)
	ASBody -> '{' ListActionDecl '}'                   (60)
	ListActionDecl ->                                  (61)
	ListActionDecl -> ActionDecl ListActionDecl        (62)
	ActionDecl -> 'override' FunctionIdent ':' MethodType '=' ActionBody   (63)
	ActionDecl -> FunctionIdent ':' MethodType '=' ActionBody   (64)
	ActionDecl -> 'private' FunctionIdent ':' MethodType '=' ActionBody   (65)
	ActionBody -> Expr                                 (66)
	ActionBody -> '{' ListExpr '}'                     (67)
	ListExpr ->                                        (68)
	ListExpr -> Expr ListExpr                          (69)
	Expr -> Expr1                                      (70)
	Expr -> Expr1 BooleanOperator Expr                 (71)
	Expr1 -> Expr2                                     (72)
	Expr1 -> Expr1 RelationalOperator Expr2            (73)
	Expr2 -> Expr3                                     (74)
	Expr2 -> Expr2 '+' Expr3                           (75)
	Expr2 -> Expr2 '-' Expr3                           (76)
	Expr2 -> Expr2 '++' Expr3                          (77)
	Expr3 -> Expr4                                     (78)
	Expr3 -> Expr3 '*' Expr4                           (79)
	Expr3 -> Expr3 '/' Expr4                           (80)
	Expr4 -> Expr5                                     (81)
	Expr4 -> 'not' Expr5                               (82)
	Expr4 -> '-' Expr5                                 (83)
	Expr5 -> '(' Expr ')'                              (84)
	Expr5 -> Literal                                   (85)
	Expr5 -> ValueIdent                                (86)
	Expr5 -> LocalValueDecl                            (87)
	Expr5 -> LambdaFunction                            (88)
	Expr5 -> LambdaAction                              (89)
	Expr5 -> 'local' '.' FunctionCall                  (90)
	Expr5 -> 'local' '#' FunctionCall                  (91)
	Expr5 -> ConstructorCall                           (92)
	Expr5 -> GetExpr                                   (93)
	Expr5 -> DoExpr                                    (94)
	Expr5 -> ImperativeControlFlow                     (95)
	Expr5 -> FunctionalControlFlow                     (96)
	Literal -> Integer                                 (97)
	Literal -> Boolean                                 (98)
	Literal -> Char                                    (99)
	Literal -> String                                  (100)
	Literal -> Void                                    (101)
	Boolean -> 'True'                                  (102)
	Boolean -> 'False'                                 (103)
	Void -> 'Pass'                                     (104)
	LocalValueDecl -> 'value' ValueDecl                (105)
	LambdaFunction -> 'get' '(' ListValueDecl ')' '->' Expr   (106)
	LambdaFunction -> 'get' '(' ListValueDecl ')' '->' '{' Expr '}'   (107)
	LambdaAction -> 'do' '(' ListValueDecl ')' '->' Expr   (108)
	LambdaAction -> 'do' '(' ListValueDecl ')' '->' '{' Expr '}'   (109)
	FunctionCall -> FunctionIdent                      (110)
	FunctionCall -> FunctionIdent '(' ListFunctionArgument ')'   (111)
	ListFunctionArgument ->                            (112)
	ListFunctionArgument -> FunctionArgument           (113)
	ListFunctionArgument -> FunctionArgument ',' ListFunctionArgument   (114)
	FunctionArgument -> Expr                           (115)
	ConstructorCall -> ClassIdent                      (116)
	ConstructorCall -> ClassIdent '(' ListFunctionArgument ')'   (117)
	GetExpr -> ValueIdent '.' FunctionCall             (118)
	GetExpr -> ClassIdent '.' FunctionCall             (119)
	GetExpr -> GetExpr '.' FunctionCall                (120)
	DoExpr -> ValueIdent '#' FunctionCall              (121)
	DoExpr -> ClassIdent '#' FunctionCall              (122)
	DoExpr -> GetExpr '#' FunctionCall                 (123)
	ImperativeControlFlow -> 'while' '(' Expr ')' '{' ListExpr '}'   (124)
	ImperativeControlFlow -> 'for' '(' ValueDecl 'in' Expr ')' '{' ListExpr '}'   (125)
	ImperativeControlFlow -> 'if' '(' Expr ')' '{' ListExpr '}' OptionalElseBranch   (126)
	OptionalElseBranch -> 'else' '{' ListExpr '}'      (127)
	OptionalElseBranch ->                              (128)
	FunctionalControlFlow -> 'if' '(' Expr ')' ThenBranch ElseBranch   (129)
	FunctionalControlFlow -> 'match' Expr '{' ListMatchCase '}'   (130)
	ThenBranch -> 'then' Expr                          (131)
	ThenBranch -> 'then' '{' Expr '}'                  (132)
	ElseBranch -> 'else' Expr                          (133)
	ElseBranch -> 'else' '{' Expr '}'                  (134)
	ListMatchCase ->                                   (135)
	ListMatchCase -> MatchCase ListMatchCase           (136)
	MatchCase -> 'case' Pattern '->' Expr              (137)
	Pattern -> ClassIdent                              (138)
	RelationalOperator -> '<'                          (139)
	RelationalOperator -> '<='                         (140)
	RelationalOperator -> '>'                          (141)
	RelationalOperator -> '>='                         (142)
	RelationalOperator -> '=='                         (143)
	RelationalOperator -> '!='                         (144)
	BooleanOperator -> 'and'                           (145)
	BooleanOperator -> 'or'                            (146)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'#'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'.'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'False'        { PT _ (TS _ 20) }
	'Pass'         { PT _ (TS _ 21) }
	'True'         { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'abstract'     { PT _ (TS _ 25) }
	'actions:'     { PT _ (TS _ 26) }
	'and'          { PT _ (TS _ 27) }
	'case'         { PT _ (TS _ 28) }
	'class'        { PT _ (TS _ 29) }
	'do'           { PT _ (TS _ 30) }
	'else'         { PT _ (TS _ 31) }
	'extends'      { PT _ (TS _ 32) }
	'for'          { PT _ (TS _ 33) }
	'functions:'   { PT _ (TS _ 34) }
	'get'          { PT _ (TS _ 35) }
	'if'           { PT _ (TS _ 36) }
	'immutable'    { PT _ (TS _ 37) }
	'in'           { PT _ (TS _ 38) }
	'local'        { PT _ (TS _ 39) }
	'match'        { PT _ (TS _ 40) }
	'mutable'      { PT _ (TS _ 41) }
	'not'          { PT _ (TS _ 42) }
	'or'           { PT _ (TS _ 43) }
	'override'     { PT _ (TS _ 44) }
	'private'      { PT _ (TS _ 45) }
	'singleton'    { PT _ (TS _ 46) }
	'then'         { PT _ (TS _ 47) }
	'value'        { PT _ (TS _ 48) }
	'values:'      { PT _ (TS _ 49) }
	'variables:'   { PT _ (TS _ 50) }
	'while'        { PT _ (TS _ 51) }
	'with'         { PT _ (TS _ 52) }
	'{'            { PT _ (TS _ 53) }
	'}'            { PT _ (TS _ 54) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_UpperCaseIdent{ PT _ (T_UpperCaseIdent $$) }
	L_LowerCaseIdent{ PT _ (T_LowerCaseIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Char            rule  1
	Integer         rule  2
	String          rule  3
	UpperCaseIdent  rule  4
	LowerCaseIdent  rule  5
	Program         rule  6
	ListClassIdent  rules 7, 8, 9
	ClassIdent      rule  10
	ListClassDecl   rules 11, 12
	ClassDecl       rules 13, 14
	Inheritance     rules 15, 16
	ClassBody       rules 17, 18
	ClassType       rules 19, 20, 21
	ValuesSection   rules 22, 23
	VariablesSection rules 24, 25
	FunctionsSection rules 26, 27
	ActionsSection  rules 28, 29
	ValSBody        rules 30, 31
	ValueIdent      rule  32
	ValueType       rules 33, 34, 35, 36
	ListValueDecl   rules 37, 38, 39
	ValueDecl       rules 40, 41
	ValueDeclProper rules 42, 43
	VarSBody        rules 44, 45
	FSBody          rules 46, 47
	FunctionIdent   rule  48
	MethodType      rule  49
	ListFunctionDecl rules 50, 51
	FunctionDecl    rules 52, 53, 54
	FunctionBody    rules 55, 56
	WithValues      rules 57, 58
	ASBody          rules 59, 60
	ListActionDecl  rules 61, 62
	ActionDecl      rules 63, 64, 65
	ActionBody      rules 66, 67
	ListExpr        rules 68, 69
	Expr            rules 70, 71
	Expr1           rules 72, 73
	Expr2           rules 74, 75, 76, 77
	Expr3           rules 78, 79, 80
	Expr4           rules 81, 82, 83
	Expr5           rules 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96
	Literal         rules 97, 98, 99, 100, 101
	Boolean         rules 102, 103
	Void            rule  104
	LocalValueDecl  rule  105
	LambdaFunction  rules 106, 107
	LambdaAction    rules 108, 109
	FunctionCall    rules 110, 111
	ListFunctionArgument rules 112, 113, 114
	FunctionArgument rule  115
	ConstructorCall rules 116, 117
	GetExpr         rules 118, 119, 120
	DoExpr          rules 121, 122, 123
	ImperativeControlFlow rules 124, 125, 126
	OptionalElseBranch rules 127, 128
	FunctionalControlFlow rules 129, 130
	ThenBranch      rules 131, 132
	ElseBranch      rules 133, 134
	ListMatchCase   rules 135, 136
	MatchCase       rule  137
	Pattern         rule  138
	RelationalOperator rules 139, 140, 141, 142, 143, 144
	BooleanOperator rules 145, 146

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'abstract'     shift, and enter state 7
	'immutable'    shift, and enter state 8
	'mutable'      shift, and enter state 9
	'singleton'    shift, and enter state 10

	Program        goto state 3
	ListClassDecl  goto state 4
	ClassDecl      goto state 5
	ClassType      goto state 6

State 1

	Char -> . L_charac                                  (rule 1)

	L_charac       shift, and enter state 2


State 2

	Char -> L_charac .                                  (rule 1)

	'!='           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'False'        reduce using rule 1
	'Pass'         reduce using rule 1
	'True'         reduce using rule 1
	'actions:'     reduce using rule 1
	'and'          reduce using rule 1
	'case'         reduce using rule 1
	'do'           reduce using rule 1
	'else'         reduce using rule 1
	'for'          reduce using rule 1
	'functions:'   reduce using rule 1
	'get'          reduce using rule 1
	'if'           reduce using rule 1
	'in'           reduce using rule 1
	'local'        reduce using rule 1
	'match'        reduce using rule 1
	'not'          reduce using rule 1
	'or'           reduce using rule 1
	'override'     reduce using rule 1
	'private'      reduce using rule 1
	'value'        reduce using rule 1
	'variables:'   reduce using rule 1
	'while'        reduce using rule 1
	'{'            reduce using rule 1
	'}'            reduce using rule 1
	L_charac       reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1
	L_UpperCaseIdentreduce using rule 1
	L_LowerCaseIdentreduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListClassDecl .                          (rule 6)

	%eof           reduce using rule 6


State 5

	ListClassDecl -> ClassDecl .                        (rule 11)
	ListClassDecl -> ClassDecl . ListClassDecl          (rule 12)

	'abstract'     shift, and enter state 7
	'immutable'    shift, and enter state 8
	'mutable'      shift, and enter state 9
	'singleton'    shift, and enter state 10
	%eof           reduce using rule 11

	ListClassDecl  goto state 13
	ClassDecl      goto state 5
	ClassType      goto state 6

State 6

	ClassDecl -> ClassType . 'class' ClassIdent Inheritance ClassBody    (rule 13)

	'class'        shift, and enter state 12


State 7

	ClassDecl -> 'abstract' . ClassType 'class' ClassIdent Inheritance ClassBody    (rule 14)

	'immutable'    shift, and enter state 8
	'mutable'      shift, and enter state 9
	'singleton'    shift, and enter state 10

	ClassType      goto state 11

State 8

	ClassType -> 'immutable' .                          (rule 20)

	'class'        reduce using rule 20


State 9

	ClassType -> 'mutable' .                            (rule 19)

	'class'        reduce using rule 19


State 10

	ClassType -> 'singleton' .                          (rule 21)

	'class'        reduce using rule 21


State 11

	ClassDecl -> 'abstract' ClassType . 'class' ClassIdent Inheritance ClassBody    (rule 14)

	'class'        shift, and enter state 17


State 12

	ClassDecl -> ClassType 'class' . ClassIdent Inheritance ClassBody    (rule 13)

	L_UpperCaseIdentshift, and enter state 16

	UpperCaseIdent goto state 14
	ClassIdent     goto state 15

State 13

	ListClassDecl -> ClassDecl ListClassDecl .          (rule 12)

	%eof           reduce using rule 12


State 14

	ClassIdent -> UpperCaseIdent .                      (rule 10)

	'!='           reduce using rule 10
	'#'            reduce using rule 10
	'('            reduce using rule 10
	')'            reduce using rule 10
	'*'            reduce using rule 10
	'+'            reduce using rule 10
	'++'           reduce using rule 10
	','            reduce using rule 10
	'-'            reduce using rule 10
	'->'           reduce using rule 10
	'.'            reduce using rule 10
	'/'            reduce using rule 10
	'<'            reduce using rule 10
	'<='           reduce using rule 10
	'='            reduce using rule 10
	'=='           reduce using rule 10
	'>'            reduce using rule 10
	'>='           reduce using rule 10
	'False'        reduce using rule 10
	'Pass'         reduce using rule 10
	'True'         reduce using rule 10
	'['            reduce using rule 10
	']'            reduce using rule 10
	'abstract'     reduce using rule 10
	'actions:'     reduce using rule 10
	'and'          reduce using rule 10
	'case'         reduce using rule 10
	'do'           reduce using rule 10
	'else'         reduce using rule 10
	'extends'      reduce using rule 10
	'for'          reduce using rule 10
	'functions:'   reduce using rule 10
	'get'          reduce using rule 10
	'if'           reduce using rule 10
	'immutable'    reduce using rule 10
	'in'           reduce using rule 10
	'local'        reduce using rule 10
	'match'        reduce using rule 10
	'mutable'      reduce using rule 10
	'not'          reduce using rule 10
	'or'           reduce using rule 10
	'override'     reduce using rule 10
	'private'      reduce using rule 10
	'singleton'    reduce using rule 10
	'value'        reduce using rule 10
	'variables:'   reduce using rule 10
	'while'        reduce using rule 10
	'{'            reduce using rule 10
	'}'            reduce using rule 10
	L_charac       reduce using rule 10
	L_integ        reduce using rule 10
	L_quoted       reduce using rule 10
	L_UpperCaseIdentreduce using rule 10
	L_LowerCaseIdentreduce using rule 10
	%eof           reduce using rule 10


State 15

	ClassDecl -> ClassType 'class' ClassIdent . Inheritance ClassBody    (rule 13)

	'abstract'     reduce using rule 15
	'extends'      shift, and enter state 20
	'immutable'    reduce using rule 15
	'mutable'      reduce using rule 15
	'singleton'    reduce using rule 15
	'{'            reduce using rule 15
	%eof           reduce using rule 15

	Inheritance    goto state 19

State 16

	UpperCaseIdent -> L_UpperCaseIdent .                (rule 4)

	'!='           reduce using rule 4
	'#'            reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'+'            reduce using rule 4
	'++'           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'->'           reduce using rule 4
	'.'            reduce using rule 4
	'/'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'='            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'False'        reduce using rule 4
	'Pass'         reduce using rule 4
	'True'         reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4
	'abstract'     reduce using rule 4
	'actions:'     reduce using rule 4
	'and'          reduce using rule 4
	'case'         reduce using rule 4
	'do'           reduce using rule 4
	'else'         reduce using rule 4
	'extends'      reduce using rule 4
	'for'          reduce using rule 4
	'functions:'   reduce using rule 4
	'get'          reduce using rule 4
	'if'           reduce using rule 4
	'immutable'    reduce using rule 4
	'in'           reduce using rule 4
	'local'        reduce using rule 4
	'match'        reduce using rule 4
	'mutable'      reduce using rule 4
	'not'          reduce using rule 4
	'or'           reduce using rule 4
	'override'     reduce using rule 4
	'private'      reduce using rule 4
	'singleton'    reduce using rule 4
	'value'        reduce using rule 4
	'variables:'   reduce using rule 4
	'while'        reduce using rule 4
	'{'            reduce using rule 4
	'}'            reduce using rule 4
	L_charac       reduce using rule 4
	L_integ        reduce using rule 4
	L_quoted       reduce using rule 4
	L_UpperCaseIdentreduce using rule 4
	L_LowerCaseIdentreduce using rule 4
	%eof           reduce using rule 4


State 17

	ClassDecl -> 'abstract' ClassType 'class' . ClassIdent Inheritance ClassBody    (rule 14)

	L_UpperCaseIdentshift, and enter state 16

	UpperCaseIdent goto state 14
	ClassIdent     goto state 18

State 18

	ClassDecl -> 'abstract' ClassType 'class' ClassIdent . Inheritance ClassBody    (rule 14)

	'abstract'     reduce using rule 15
	'extends'      shift, and enter state 20
	'immutable'    reduce using rule 15
	'mutable'      reduce using rule 15
	'singleton'    reduce using rule 15
	'{'            reduce using rule 15
	%eof           reduce using rule 15

	Inheritance    goto state 24

State 19

	ClassDecl -> ClassType 'class' ClassIdent Inheritance . ClassBody    (rule 13)

	'abstract'     reduce using rule 17
	'immutable'    reduce using rule 17
	'mutable'      reduce using rule 17
	'singleton'    reduce using rule 17
	'{'            shift, and enter state 23
	%eof           reduce using rule 17

	ClassBody      goto state 22

State 20

	Inheritance -> 'extends' . ClassIdent               (rule 16)

	L_UpperCaseIdentshift, and enter state 16

	UpperCaseIdent goto state 14
	ClassIdent     goto state 21

State 21

	Inheritance -> 'extends' ClassIdent .               (rule 16)

	'abstract'     reduce using rule 16
	'immutable'    reduce using rule 16
	'mutable'      reduce using rule 16
	'singleton'    reduce using rule 16
	'{'            reduce using rule 16
	%eof           reduce using rule 16


State 22

	ClassDecl -> ClassType 'class' ClassIdent Inheritance ClassBody .    (rule 13)

	'abstract'     reduce using rule 13
	'immutable'    reduce using rule 13
	'mutable'      reduce using rule 13
	'singleton'    reduce using rule 13
	%eof           reduce using rule 13


State 23

	ClassBody -> '{' . ValuesSection VariablesSection FunctionsSection ActionsSection '}'    (rule 18)

	'actions:'     reduce using rule 22
	'functions:'   reduce using rule 22
	'values:'      shift, and enter state 27
	'variables:'   reduce using rule 22
	'}'            reduce using rule 22

	ValuesSection  goto state 26

State 24

	ClassDecl -> 'abstract' ClassType 'class' ClassIdent Inheritance . ClassBody    (rule 14)

	'abstract'     reduce using rule 17
	'immutable'    reduce using rule 17
	'mutable'      reduce using rule 17
	'singleton'    reduce using rule 17
	'{'            shift, and enter state 23
	%eof           reduce using rule 17

	ClassBody      goto state 25

State 25

	ClassDecl -> 'abstract' ClassType 'class' ClassIdent Inheritance ClassBody .    (rule 14)

	'abstract'     reduce using rule 14
	'immutable'    reduce using rule 14
	'mutable'      reduce using rule 14
	'singleton'    reduce using rule 14
	%eof           reduce using rule 14


State 26

	ClassBody -> '{' ValuesSection . VariablesSection FunctionsSection ActionsSection '}'    (rule 18)

	'actions:'     reduce using rule 24
	'functions:'   reduce using rule 24
	'variables:'   shift, and enter state 38
	'}'            reduce using rule 24

	VariablesSectiongoto state 37

State 27

	ValuesSection -> 'values:' . ValSBody               (rule 23)

	'actions:'     reduce using rule 37
	'functions:'   reduce using rule 37
	'override'     reduce using rule 37
	'private'      shift, and enter state 34
			(reduce using rule 37)

	'variables:'   reduce using rule 37
	'{'            shift, and enter state 35
	'}'            reduce using rule 37
	L_LowerCaseIdentshift, and enter state 36
			(reduce using rule 37)


	LowerCaseIdent goto state 28
	ValSBody       goto state 29
	ValueIdent     goto state 30
	ListValueDecl  goto state 31
	ValueDecl      goto state 32
	ValueDeclPropergoto state 33

State 28

	ValueIdent -> LowerCaseIdent .                      (rule 32)

	'!='           reduce using rule 32
	'#'            reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'*'            reduce using rule 32
	'+'            reduce using rule 32
	'++'           reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	'.'            reduce using rule 32
	'/'            reduce using rule 32
	':'            reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'False'        reduce using rule 32
	'Pass'         reduce using rule 32
	'True'         reduce using rule 32
	'actions:'     reduce using rule 32
	'and'          reduce using rule 32
	'case'         reduce using rule 32
	'do'           reduce using rule 32
	'else'         reduce using rule 32
	'for'          reduce using rule 32
	'functions:'   reduce using rule 32
	'get'          reduce using rule 32
	'if'           reduce using rule 32
	'in'           reduce using rule 32
	'local'        reduce using rule 32
	'match'        reduce using rule 32
	'not'          reduce using rule 32
	'or'           reduce using rule 32
	'override'     reduce using rule 32
	'private'      reduce using rule 32
	'value'        reduce using rule 32
	'variables:'   reduce using rule 32
	'while'        reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	L_charac       reduce using rule 32
	L_integ        reduce using rule 32
	L_quoted       reduce using rule 32
	L_UpperCaseIdentreduce using rule 32
	L_LowerCaseIdentreduce using rule 32


State 29

	ValuesSection -> 'values:' ValSBody .               (rule 23)

	'actions:'     reduce using rule 23
	'functions:'   reduce using rule 23
	'override'     reduce using rule 23
	'private'      reduce using rule 23
	'variables:'   reduce using rule 23
	'}'            reduce using rule 23
	L_LowerCaseIdentreduce using rule 23


State 30

	ValueDeclProper -> ValueIdent . ':' ValueType       (rule 42)
	ValueDeclProper -> ValueIdent . ':' ValueType '=' Expr    (rule 43)

	':'            shift, and enter state 47


State 31

	ValSBody -> ListValueDecl .                         (rule 30)

	'actions:'     reduce using rule 30
	'functions:'   reduce using rule 30
	'override'     reduce using rule 30
	'private'      reduce using rule 30
	'variables:'   reduce using rule 30
	'}'            reduce using rule 30
	L_LowerCaseIdentreduce using rule 30


State 32

	ListValueDecl -> ValueDecl .                        (rule 38)
	ListValueDecl -> ValueDecl . ',' ListValueDecl      (rule 39)

	')'            reduce using rule 38
	','            shift, and enter state 46
	'actions:'     reduce using rule 38
	'functions:'   reduce using rule 38
	'override'     reduce using rule 38
	'private'      reduce using rule 38
	'variables:'   reduce using rule 38
	'}'            reduce using rule 38
	L_LowerCaseIdentreduce using rule 38


State 33

	ValueDecl -> ValueDeclProper .                      (rule 40)

	'!='           reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	'++'           reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'False'        reduce using rule 40
	'Pass'         reduce using rule 40
	'True'         reduce using rule 40
	'actions:'     reduce using rule 40
	'and'          reduce using rule 40
	'case'         reduce using rule 40
	'do'           reduce using rule 40
	'else'         reduce using rule 40
	'for'          reduce using rule 40
	'functions:'   reduce using rule 40
	'get'          reduce using rule 40
	'if'           reduce using rule 40
	'in'           reduce using rule 40
	'local'        reduce using rule 40
	'match'        reduce using rule 40
	'not'          reduce using rule 40
	'or'           reduce using rule 40
	'override'     reduce using rule 40
	'private'      reduce using rule 40
	'value'        reduce using rule 40
	'variables:'   reduce using rule 40
	'while'        reduce using rule 40
	'{'            reduce using rule 40
	'}'            reduce using rule 40
	L_charac       reduce using rule 40
	L_integ        reduce using rule 40
	L_quoted       reduce using rule 40
	L_UpperCaseIdentreduce using rule 40
	L_LowerCaseIdentreduce using rule 40


State 34

	ValueDecl -> 'private' . ValueDeclProper            (rule 41)

	L_LowerCaseIdentshift, and enter state 36

	LowerCaseIdent goto state 28
	ValueIdent     goto state 30
	ValueDeclPropergoto state 45

State 35

	ValSBody -> '{' . ListValueDecl '}'                 (rule 31)

	'private'      shift, and enter state 34
	'}'            reduce using rule 37
	L_LowerCaseIdentshift, and enter state 36

	LowerCaseIdent goto state 28
	ValueIdent     goto state 30
	ListValueDecl  goto state 44
	ValueDecl      goto state 32
	ValueDeclPropergoto state 33

State 36

	LowerCaseIdent -> L_LowerCaseIdent .                (rule 5)

	'!='           reduce using rule 5
	'#'            reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'++'           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'.'            reduce using rule 5
	'/'            reduce using rule 5
	':'            reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'=='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'False'        reduce using rule 5
	'Pass'         reduce using rule 5
	'True'         reduce using rule 5
	'actions:'     reduce using rule 5
	'and'          reduce using rule 5
	'case'         reduce using rule 5
	'do'           reduce using rule 5
	'else'         reduce using rule 5
	'for'          reduce using rule 5
	'functions:'   reduce using rule 5
	'get'          reduce using rule 5
	'if'           reduce using rule 5
	'in'           reduce using rule 5
	'local'        reduce using rule 5
	'match'        reduce using rule 5
	'not'          reduce using rule 5
	'or'           reduce using rule 5
	'override'     reduce using rule 5
	'private'      reduce using rule 5
	'value'        reduce using rule 5
	'variables:'   reduce using rule 5
	'while'        reduce using rule 5
	'{'            reduce using rule 5
	'}'            reduce using rule 5
	L_charac       reduce using rule 5
	L_integ        reduce using rule 5
	L_quoted       reduce using rule 5
	L_UpperCaseIdentreduce using rule 5
	L_LowerCaseIdentreduce using rule 5


State 37

	ClassBody -> '{' ValuesSection VariablesSection . FunctionsSection ActionsSection '}'    (rule 18)

	'actions:'     reduce using rule 26
	'functions:'   shift, and enter state 43
	'}'            reduce using rule 26

	FunctionsSectiongoto state 42

State 38

	VariablesSection -> 'variables:' . VarSBody         (rule 25)

	'actions:'     reduce using rule 37
	'functions:'   reduce using rule 37
	'private'      shift, and enter state 34
	'{'            shift, and enter state 41
	'}'            reduce using rule 37
	L_LowerCaseIdentshift, and enter state 36

	LowerCaseIdent goto state 28
	ValueIdent     goto state 30
	ListValueDecl  goto state 39
	ValueDecl      goto state 32
	ValueDeclPropergoto state 33
	VarSBody       goto state 40

State 39

	VarSBody -> ListValueDecl .                         (rule 44)

	'actions:'     reduce using rule 44
	'functions:'   reduce using rule 44
	'}'            reduce using rule 44


State 40

	VariablesSection -> 'variables:' VarSBody .         (rule 25)

	'actions:'     reduce using rule 25
	'functions:'   reduce using rule 25
	'}'            reduce using rule 25


State 41
